--- a/_posts/alt-r-with-vscode/going-alt-rstats-with-vscode.Rmd
+++ b/_posts/alt-r-with-vscode/going-alt-rstats-with-vscode.Rmd
@@ -9,6 +9,9 @@ date: 2018-02-22
 output:
   distill::distill_article:
     self_contained: false
+categories:
+  - vscode
+  - rstats
 ---
 
 ```{r setup, include=FALSE}
