--- a/_posts/ropensci-onboarding2/where-is-the-value-in-package-peer-review.Rmd
+++ b/_posts/ropensci-onboarding2/where-is-the-value-in-package-peer-review.Rmd
@@ -10,6 +10,10 @@ output:
   distill::distill_article:
     self_contained: false
 preview: 1200px-Satin_bowerbird.jpg 
+categories:
+  - rstats
+  - rOpenSci
+  - open science
 ---
 
 ```{r setup, include=FALSE}
