--- a/about.Rmd
+++ b/about.Rmd
@@ -8,4 +8,9 @@ description: |
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-This is the personal blog of Miles McBain coming to you from Brisbane, Queensland, Australia.
+This is the personal blog of Miles McBain, coming to you from Brisbane, Queensland, Australia.
+
+Find me online:
+
+  - `r fontawesome::fa("twitter")` [`@milesmcbain`](https://www.twitter.com/milesmcbain)
+  - `r fontawesome::fa("github")` [`@milesmcbain`](https://www.github.com/milesmcbain)
