fix spacing, remove highlights, regen

--- a/_posts/for-loops/horseman_number_for.Rmd
+++ b/_posts/for-loops/horseman_number_for.Rmd
@@ -71,7 +71,7 @@ A strong theme of some of the programming reading I have been doing recently is 
 
 When you create an abstraction you build up an object or function in code that maps closely to some part of your mental model of your problem. If you do it well enough, you can express your coded solution simply, and 'in your own words', and have it solved. That is MAGIC. Think about the most popular R packages. By and large their popularity is due to the quality of the abstractions that they provide.
 
-==A loop is not an abstraction. It is a low level construct that maps relatively closely to how computers work, not necessarily to how humans think.== To use a loop you have to take your high-level formulation of a solution and 'build down' or 'decompile' to the level of primitive computing operations like `for` and `if else`. Sometimes this is unavoidable, but the danger in leaving your solution expressed in these terms is that the high level mental constructs you formed your solution with are not present in the code.
+A loop is not an abstraction. It is a low level construct that maps relatively closely to how computers work, not necessarily to how humans think. To use a loop you have to take your high-level formulation of a solution and 'build down' or 'decompile' to the level of primitive computing operations like `for` and `if else`. Sometimes this is unavoidable, but the danger in leaving your solution expressed in these terms is that the high level mental constructs you formed your solution with are not present in the code.
 
 This means that when someone else, or you in the future, reads the solution, decompilation artifacts can be mistaken as important to the algorithm. An example decompilation artifact is the sequentiality constraint inherent in a loop - is this important or could the iteration happen in parallel? It's not clear without tracing through all the looped steps carefully.
 
