--- a/_posts/how-to-survive-a-laptop-fire/how_to_survive_a_laptop_fire.Rmd
+++ b/_posts/how-to-survive-a-laptop-fire/how_to_survive_a_laptop_fire.Rmd
@@ -24,7 +24,7 @@ knitr::include_graphics("Burned_laptop_secumem_11.jpg")
 ```
 Over the last few years I've evolved a cloud-centric workflow that allows me to work more or less seamlessly across multiple projects, computers, and operating systems. This post is about the principles, software and services I use to make that work.
 
-Often when I'm ~~advocating~~ evangelising about working in this way I ask people something to the effect of =='How bad would it be for your work if your laptop burned in a fire?'==^[One important way to avoid this is to stop hardcoding your local file paths in your code. Just ask Jenny Bryan.] - Alot of the responses I get tend to focus on personal data - 'Well I do backup on Dropbox!', 'I use Googledrive', etc. But I argue personal data loss is really just part of the pain you'd experience. What about your Applications? Software libraries? Just how hard would it be to recover a working environment that would allow you to carry on?^[I once witnessed an amazing example of this at [rOpenSci Ozunconf16](https://ropensci.org/blog/2016/06/16/au-unconf/). As keystrokes were flying in some intensise pair programming, a fresh flat white coffee was emptied on to [Jeff Hanson's](https://github.com/jeffreyhanson) laptop. I swear without missing a beat he flipped the laptop upside down to drain, then immediately ignored it, moved to his buddy's laptop, pulled the repo, and carried on typing. When I think about being robust to loss of computer, Jeff's complete lack of concern is the bar to which I aspire.]
+Often when I'm ~~advocating~~ evangelising about working in this way I ask people something to the effect of 'How bad would it be for your work if your laptop burned in a fire?'^[One important way to avoid this is to stop hardcoding your local file paths in your code. Just ask Jenny Bryan.] - Alot of the responses I get tend to focus on personal data - 'Well I do backup on Dropbox!', 'I use Googledrive', etc. But I argue personal data loss is really just part of the pain you'd experience. What about your Applications? Software libraries? Just how hard would it be to recover a working environment that would allow you to carry on?^[I once witnessed an amazing example of this at [rOpenSci Ozunconf16](https://ropensci.org/blog/2016/06/16/au-unconf/). As keystrokes were flying in some intensise pair programming, a fresh flat white coffee was emptied on to [Jeff Hanson's](https://github.com/jeffreyhanson) laptop. I swear without missing a beat he flipped the laptop upside down to drain, then immediately ignored it, moved to his buddy's laptop, pulled the repo, and carried on typing. When I think about being robust to loss of computer, Jeff's complete lack of concern is the bar to which I aspire.]
 
 # Survival skills
 
