--- a/_posts/adding-addins-for-vscode/adding_addins_to_vscode.Rmd
+++ b/_posts/adding-addins-for-vscode/adding_addins_to_vscode.Rmd
@@ -43,8 +43,9 @@ Lisp. In RStudio it's R.]
 VSCode was without this ability. So I thought that to implement a binding for my
 beloved `fnmate` my options were:
 
-* Write my own VSCode extension - having to redo work already in the R extension, relating to interfacing with the R process in terminal.
-* Get a binding for `fnmate` merged into the R extension.
+  * Write my own VSCode extension - having to redo work already in the R
+    extension, relating to interfacing with the R process in terminal.
+  * Get a binding for `fnmate` merged into the R extension.
 
 And I guess I was mulling over what unsatisfying options these were when I
 realised that what the VSCode R extension really needed was something like the
@@ -146,10 +147,10 @@ session in response to `rstudioapi` requests. This had to be written in
 Typescript using the VSCode API.
 
 The way in which the communications worked was quite interesting to me - I guess
-I assumed it would be some kind of fancy web socket protocol. Actually it's
-pretty lofi, based on files. It worked like this:
+I assumed it would be some kind of fancy web socket protocol thing. Actually
+it's pretty lofi, based on files. It worked like this:
 
-1. On startup VSCode R sessions creates two files `request.log` and
+1. On startup VSCode R sessions create two files `request.log` and
    `request.lock`. In VSCode/Typescript land a file watcher process is attached
    to the lock file that triggers a callback function whenever the lock file is
    updated.
@@ -161,7 +162,7 @@ pretty lofi, based on files. It worked like this:
 4. A request router is just a fancy name for a giant switch statement that
    examines the JSON and decides what functions to call.
 
-My implementation for the return path copied ideas. Once you make an
+My implementation for the return path copied these ideas. Once you make an
 `rstudioapi` call from R, the R sessions blocks, checking a `response.lock` file
 every 100ms until an update appears and response data is read from
 `response.log`.
@@ -175,10 +176,108 @@ changes in VSCode had been applied before I allowed a new request to be written,
 otherwise request data might be overwritten without being handled.
 
 
-# Lessons Learned
+# Challenges
 
+## Typescript workflow
+
+Typescript is a statically typed Javascript-a-like that compiles to Javascipt. I
+quite enjoy the language, but I found working without a REPL to be
+excruciatingly slow initially.
+
+I was going:
+  
+  * write code
+  * compile and build extension
+  * test extension
+  * repeat
+  
+And the compilation/build time, and repetitive nature of setting up state for a test was a drag. A couple of things I discovered:
+
+  * If you put a breakpoint inside a function you are developing you can get to
+    something like a REPL pretty quickly by doing your development in debug
+    mode. You have the entire application's state available in an object called
+    `vscode_1` that you can tinker with.
+  * By stopping fighting the type checker, and refactoring code that didn't play
+    nicely with it, I found the strong linting and hover help capability of
+    VSCode gave me enough context to work without the safety net of the REPL.
+    It's a different kind of safety net, one that works well with application code.
+
+## Merging a large PR
+
+The maintainers of the VSCode-R extension have quite high standards for the
+code. [Kun Ren]() gives unrelentingly thorough code reviews, which are actually
+a really valuable thing that I haven't had a lot of in my software-writing
+career. It felt a little like a session with a code personal trainer. I
+realised I had been lazy in parts, or there were nicer ways of doing things that
+weren't as complex as I had estimated.
+
+I was quite sympathetic to this process. Asking people to take on 1000 lines of
+potential technical debt is a big deal. We're playing catch with a loaded
+foot-gun - whatever precautions the catcher wants to take have to be respected.
 
 
 # And then I broke library(tidyverse)
 
-So I was feeling pretty happy, 5 weeks worth of spare evenings had amounted to something that felt pretty close to the native RStudio experience for all the popular addins accoring to #rstats twitter users
+It turned out that much to my embarrassment the foot-gun went off pretty much
+immediately!
+
+When repository owner [Yuki Ueda] creates a release, it automatically flows
+through to VSCode users the next time they open VSCode. The PR was merged in the
+afternoon and in the evening I logged into my work machine to catch up on a task
+from a few hours earlier. My code fell in a heap at `library(tidyverse)` with an
+error that was painfully familiar, since I coded the message myself:
+
+```
+error: This `{rstudioapi}` function is not currenlty implemented for VSCode.
+```
+
+WAT. I frantically tried to reproduce the bug on my personal laptop running
+Ubuntu and couldn't. Ken Ren couldn't reproduce it on Mac OS either. It seemed
+we had missed some Windows specific behaviour which I was the first to encounter
+on my Windows work machine.
+
+In the midst of this, a colleague of mine who is studying messaged me to let me know the bug had sent someone in his study group into a panic and he had bailed them out with a fork of the extension. I felt terrible!
+
+Over the next couple of hours we worked out the issues and implemented a fix. We
+also made the `{rstudioapi}` emulation in VSCode opt-in for now with an option
+that must be set: `options(vsc.rstudioapi = TRUE)` in case there are any other
+big showstoppers we haven't seen yet. 
+
+In retrospect the option would have been a good idea from the start, I did think
+about it at some point, but I guess I got overconfident.
+
+The bug itself is was quite interesting to me. When a user does
+`library(tidyverse)` for the first time in a session there is an on-attach hook
+that runs that prints a familiar _fancy_ looking message:
+
+```
+library(tidyverse)
+── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──
+✔ ggplot2 3.3.2     ✔ purrr   0.3.4
+✔ tibble  3.0.3     ✔ dplyr   1.0.2
+✔ tidyr   1.1.2     ✔ stringr 1.4.0
+✔ readr   1.3.1     ✔ forcats 0.5.0
+── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+✖ dplyr::filter() masks stats::filter()
+✖ dplyr::lag()    masks stats::lag()
+```
+
+This reproduction on my blog is not as colourful as the one we see. 
+
+This message makes heavy use of two packages for command line output: `{crayon}`
+and `{cli}`. Now the first time _these_ packages are called in a session they
+fire off hundreds of lines of code designed to sniff details of your terminal
+and operating system, ultimately to determine:
+
+* What is the number of colours in the palette I can use in the terminal?
+* What symbols are supported in the terminal?
+
+On Windows only, `{cli}` ends up needing to know the version of RStudio you're
+running, and it gets this via `rstudioapi::getVersion`. Up until this point
+I had shied away from _spoofing_ an API version - that is my implementation
+would return `TRUE` for `rstudioapi::isAvailable()` but error if you tried to
+get the version or assert a specific version. This worked well for the dozen or so addin packages I tested.
+
+There was no way around VSCode pretending to have an RStudio version for now to get `tidyverse` working. We shall see if this creates any issues. 
+
+# Conclusion
